auto user_id, add collections
