# laravel/storage/api-docs/api-docs.json
@@ -54,7 +54,12 @@
                     "500": {
                         "description": "Internal Server Error"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/articles/{id}": {
